discussion/kv_engine/182458/182458_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54463: Add VBQueueItemCtx::deduplicate

Change-Id: I53869150ee1621d3e41d5e6c64b697934a47a3e8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-11-09 09:00:51.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-09 09:01:04.000000000
Message: 
Patch Set 2: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/323910/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-09 09:12:44.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/544/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\tests\module_tests\vbucket_test.h(101): error C2440: "default argument": cannot convert from "initializer list" to "const VBQueueItemCtx &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/544/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/401/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vbucket_queue_item_ctx.h:57:26: error: unknown type name "Configuration" [clang-diagnostic-error]
    VBQueueItemCtx(const Configuration& config)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vbucket_queue_item_ctx.h:67:26: error: unknown type name "Configuration" [clang-diagnostic-error]
                   const Configuration& config)
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/401/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vbucket_queue_item_ctx.h:57:26:
error: unknown type name "Configuration" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/401/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/426/ : FAILURE

Compile error at [2022-11-09T09:12:28.294Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/426/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/426/ : FAILURE

Compile error at [2022-11-09T09:07:54.182Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:67:
error: could not convert ?<brace-enclosed initializer list>()? from ?<brace-enclosed initializer list>? to ?const VBQueueItemCtx&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/426/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/416/ : FAILURE

Compile error at [2022-11-09T09:10:58.965Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:67:
error: could not convert ?<brace-enclosed initializer list>()? from ?<brace-enclosed initializer list>? to ?const VBQueueItemCtx&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/416/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/417/ : FAILURE

Compile error at [2022-11-09T09:10:39.069Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/417/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/405/ : FAILURE

Compile error at [2022-11-09T09:03:26.304Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:67:
error: could not convert ?<brace-enclosed initializer list>()? from ?<brace-enclosed initializer list>? to ?const VBQueueItemCtx&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/405/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/649/ : FAILURE

Compile error at [2022-11-09T09:03:38.387Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/649/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/403/ : FAILURE

Compile error at [2022-11-09T09:11:45.799Z] ../kv_engine/engines/ep/tests/module_tests/vbucket_test.h:101:60:
error: no matching constructor for initialization of "const VBQueueItemCtx &"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/403/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21071/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/391/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
